--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -61,7 +61,7 @@
             android:layout_marginStart="160dp"/>
 
         <EditText
-            android:id="@+id/tv5"
+            android:id="@+id/tvQuantity"
             android:layout_width="80dp"
             android:layout_height="50dp"
             android:layout_below="@id/tv4"
@@ -70,18 +70,19 @@
             android:layout_toRightOf="@+id/sp"
             android:gravity="center"
             android:text="1" />
+
         <Button
             android:id="@+id/tru"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:text="-"
-            android:textSize="25dp"
-            android:textColor="#000"
-            android:background="@drawable/button"
-            android:layout_toRightOf="@+id/sp"
             android:layout_below="@id/tv4"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"/>
+            android:layout_toRightOf="@+id/sp"
+            android:background="@drawable/button"
+            android:text="-"
+            android:textColor="#000"
+            android:textSize="25dp" />
 
     </RelativeLayout>
 
