--- a/app/src/main/res/layout/item_giohang.xml
+++ b/app/src/main/res/layout/item_giohang.xml
@@ -71,6 +71,27 @@
             android:layout_marginTop="7dp"
             android:text="0"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="110dp"
+            android:layout_height="40dp"
+            android:textSize="16dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="7dp"
+            android:hint="Tổng tiền:"
+            android:textColorHint="#000"/>
+        <TextView
+            android:id="@+id/ttspmua"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textSize="16dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="7dp"
+            android:text="0"/>
+    </LinearLayout>
 
 
 </LinearLayout>
