--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -22,16 +22,35 @@
             android:layout_height="150dp"
             android:layout_marginTop="5dp"
             android:src="@drawable/asus" />
-
+        <TextView
+            android:id="@+id/tb"
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_toRightOf="@+id/sp"
+            android:text="Tên sp:"
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
         <TextView
             android:id="@+id/tv3"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_toRightOf="@+id/sp"
+            android:layout_toRightOf="@+id/tb"
             android:text="ASUS"
             android:textColor="@color/black"
+            android:textSize="20dp" />
+        <TextView
+            android:id="@+id/tb2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_below="@id/tv3"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/sp"
+            android:text="Giá:"
+            android:textColor="#FF0000"
             android:textSize="20dp" />
 
         <TextView
@@ -41,8 +60,8 @@
             android:layout_below="@id/tv3"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_toRightOf="@+id/sp"
-            android:text="Giá:  14000000"
+            android:layout_toRightOf="@+id/tb2"
+            android:text=" 14000000"
             android:textColor="#FF0000"
             android:textSize="20dp" />
         <Button
