--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -17,7 +17,19 @@
         android:layout_height="wrap_content"
         android:src="@drawable/asus"
         android:scaleType="centerInside"/>
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_gravity="center_horizontal">
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="20dp"
+        android:text="Tensp:"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:textSize="16dp"
+        android:layout_marginLeft="20dp" />
     <TextView
         android:id="@+id/tenpc"
         android:layout_width="match_parent"
@@ -26,18 +38,33 @@
         android:textStyle="bold"
         android:textColor="#000"
         android:textSize="16dp"
-        android:layout_marginLeft="60dp" />
+        android:layout_marginLeft="10dp" />
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal">
+        <TextView
+            android:layout_width="40dp"
+            android:layout_height="20dp"
+            android:text="Giá:"
+            android:textSize="16dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:textStyle="italic"
+            android:textColor="#AA1414"/>
 
     <TextView
         android:id="@+id/giapc"
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="60dp"
-        android:text="14.000.000 đ"
+        android:text="14.000.000đ"
         android:textStyle="italic"
         android:textColor="#AA1414"
         android:textSize="16dp"/>
+    </LinearLayout>
 
 </LinearLayout>
 
