--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -7,66 +7,73 @@
     android:layout_marginBottom="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <ImageView
-        android:id="@+id/anhpc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/asus"
-        android:scaleType="centerInside"/>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_gravity="center_horizontal">
-    <TextView
-        android:layout_width="50dp"
-        android:layout_height="20dp"
-        android:text="Tensp:"
-        android:textStyle="bold"
-        android:textColor="#000"
-        android:textSize="16dp"
-        android:layout_marginLeft="20dp" />
-    <TextView
-        android:id="@+id/tenpc"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="ASUS"
-        android:textStyle="bold"
-        android:textColor="#000"
-        android:textSize="16dp"
-        android:layout_marginLeft="10dp" />
-</LinearLayout>
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-        <TextView
-            android:layout_width="40dp"
-            android:layout_height="20dp"
-            android:text="Giá:"
-            android:textSize="16dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:textStyle="italic"
-            android:textColor="#AA1414"/>
-
-    <TextView
-        android:id="@+id/giapc"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_marginTop="10dp"
-        android:text="14.000.000đ"
-        android:textStyle="italic"
-        android:textColor="#AA1414"
-        android:textSize="16dp"/>
-    </LinearLayout>
+        android:layout_height="292dp"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/anhpc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:src="@drawable/asus" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginLeft="20dp"
+                android:text="Sản phẩm:"
+                android:textColor="#000"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tenpc"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_marginLeft="10dp"
+                android:text="ASUS"
+                android:textColor="#000"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:text="Giá:"
+                android:textColor="#AA1414"
+                android:textSize="16dp"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/giapc"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
+                android:text="14.000.000đ"
+                android:textColor="#AA1414"
+                android:textSize="16dp"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 
