Make fragment_detail.xml ui better

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -107,12 +107,13 @@
 
     <Button
         android:id="@+id/bttake"
-        android:layout_width="120dp"
-        android:scaleType="fitCenter"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="25dp"
         android:background="@drawable/button"
+        android:scaleType="fitCenter"
         android:text="take" />
 
     <EditText
