--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
@@ -21,14 +22,26 @@
            android:layout_marginTop="5dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"/>
+       <RelativeLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="5dp">
        <TextView
-        android:layout_width="match_parent"
+           android:id="@+id/tv0"
+        android:layout_width="220dp"
         android:layout_height="35dp"
-           android:layout_marginTop="5dp"
         android:text="Sản phẩm mới nhất"
         android:textSize="20dp"
+       android:textColor="@android:color/holo_red_dark"/>
 
-        android:textColor="@android:color/holo_red_dark"/>
+           <androidx.appcompat.widget.SearchView
+               android:id="@+id/tk"
+               android:layout_width="200dp"
+               android:layout_height="35dp"
+               android:layout_toRightOf="@+id/tv0"
+               android:layout_marginRight="5dp"
+               android:background="@drawable/button"/>
+       </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lv"
         android:layout_width="match_parent"
