--- a/app/src/main/res/layout/information.xml
+++ b/app/src/main/res/layout/information.xml
@@ -89,7 +89,8 @@
             android:layout_toRightOf="@+id/tv3"
             android:gravity="center_horizontal"
             android:hint="Số di động"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:inputType="phone"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="wrap_content"
