Fix Dont Receive Item Quantity When Add Event For Add and Minus Quantity Button

--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -45,7 +45,7 @@
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:background="@drawable/button"
-               android:visibility="invisible"/>
+               android:visibility="visible"/>
        </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lv"
