--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -22,19 +22,21 @@
             android:layout_height="150dp"
             android:layout_marginTop="5dp"
             android:src="@drawable/asus" />
+
         <TextView
             android:id="@+id/tb"
             android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_toRightOf="@+id/sp"
             android:text="Tên sp:"
-            android:textSize="20dp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/tv3"
             android:layout_width="200dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/tb"
