--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -38,14 +38,14 @@
                android:id="@+id/tk"
                android:layout_width="230dp"
                android:layout_height="50dp"
-               android:layout_toRightOf="@+id/tv0"
                android:layout_marginRight="5dp"
-               android:gravity="center"
-               android:hint="Sear"
-               android:inputType="text"
-               android:imeOptions="actionSearch"
+               android:layout_toRightOf="@+id/tv0"
                android:background="@drawable/button"
-               android:visibility="visible"/>
+               android:gravity="center"
+               android:hint="Search"
+               android:imeOptions="actionSearch"
+               android:inputType="text"
+               android:visibility="visible" />
        </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lv"
