--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_marginLeft="20dp"
-                android:text="Sản phẩm:"
+                android:text="Dòng:"
                 android:textColor="#000"
                 android:textSize="16dp"
                 android:textStyle="bold" />
