--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -45,7 +45,7 @@
                android:hint="Search"
                android:imeOptions="actionSearch"
                android:inputType="text"
-               android:visibility="visible" />
+               android:visibility="invisible" />
        </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lv"
