--- a/app/src/main/res/layout/item_computer.xml
+++ b/app/src/main/res/layout/item_computer.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="wrap_content">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/pc1"
             android:layout_width="220dp"
             android:layout_height="200dp"
-            android:src="@drawable/asus"/>
+            android:src="@drawable/asus" />
 
         <TextView
             android:id="@+id/tv1"
@@ -42,8 +44,8 @@
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@+id/tb1"
             android:text="14000000"
-            android:textSize="20dp"
-            android:textColor="#FF0000"/>
+            android:textColor="#FF0000"
+            android:textSize="20dp" />
 
     </RelativeLayout>
 
