--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -5,54 +5,67 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-   <LinearLayout
-       android:orientation="vertical"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:background="@android:color/holo_orange_dark">
 
-       <androidx.viewpager.widget.ViewPager
-           android:id="@+id/vp"
-           android:layout_width="match_parent"
-           android:layout_height="220dp"
-           android:contentDescription="@string/ASUS" />
-       <me.relex.circleindicator.CircleIndicator
-           android:id="@+id/cr"
-           android:layout_width="wrap_content"
-           android:layout_marginTop="5dp"
-           android:layout_height="10dp"
-           android:layout_gravity="center_horizontal"/>
-       <RelativeLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="5dp">
-       <TextView
-           android:id="@+id/tv0"
-        android:layout_width="220dp"
-        android:layout_height="35dp"
-        android:text="Sản phẩm mới nhất"
-        android:textSize="20dp"
-       android:textColor="@android:color/holo_red_dark"/>
-
-           <EditText
-               android:id="@+id/tk"
-               android:layout_width="230dp"
-               android:layout_height="50dp"
-               android:layout_marginRight="5dp"
-               android:layout_toRightOf="@+id/tv0"
-               android:background="@drawable/button"
-               android:gravity="center"
-               android:hint="Search"
-               android:imeOptions="actionSearch"
-               android:inputType="text"
-               android:visibility="invisible" />
-       </RelativeLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lv"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:background="@android:color/holo_orange_dark"
+        android:orientation="vertical">
 
-   </LinearLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/vp"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:contentDescription="@string/ASUS" />
+
+        <me.relex.circleindicator.CircleIndicator
+            android:id="@+id/cr"
+            android:layout_width="wrap_content"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:id="@+id/tv0"
+                android:layout_width="220dp"
+                android:layout_height="35dp"
+                android:text="Sản phẩm mới nhất"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/txtUserGmailInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="TextView" />
+
+            <EditText
+                android:id="@+id/tk"
+                android:layout_width="230dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="5dp"
+                android:layout_toRightOf="@+id/tv0"
+                android:background="@drawable/button"
+                android:gravity="center"
+                android:hint="Search"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:visibility="invisible" />
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginTop="50dp"
+            android:id="@+id/lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp" />
+
+    </LinearLayout>
 </FrameLayout>
